<resources>
    <string name="app_name">ShopApp</string>
    <string name="title_activity_base">BaseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="warning">Warning</string>
    <string name="ok">OK</string>
    <string name="please_wait">Please wait..</string>
    <string name="generic_error">An error has occurred.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="products_fragment_label">Products</string>
    <string name="products_detail_fragment_label">ProductDetail</string>
    <string name="basket_fragment_label">Baskets</string>
    <string name="add_basket">Sepete Ekle</string>
    <string name="pazarama">pazarama</string>
    <string name="product_add">Product added</string>
    <string name="basket">Basket</string>
    <string name="_0">0</string>
    <string name="_0_TL">0.0 TL</string>
    <string name="total_tl">"%1$s TL"</string>
    <string name="products_in_stock">There are no products in stock</string>
    <string name="checkout">Sepeti Onayla</string>
    <string name="edit_basket">Sepete Ekle</string>
    <string name="desc_title">Ürün Açıklaması</string>
    <string name="features_title">Ürün Özellikleri</string>
</resources>