<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/productsFragment">

    <fragment
        android:id="@+id/productsFragment"
        android:name="com.example.shopapp.ui.product.ProductsFragment"
        android:label="@string/products_fragment_label"
        tools:layout="@layout/fragment_products">

        <action
            android:id="@+id/action_products_to_basket"
            app:destination="@id/basketFragment" />

        <action
            android:id="@+id/action_products_to_productDetail"
            app:destination="@id/productDetailFragment" />

    </fragment>

    <fragment
        android:id="@+id/productDetailFragment"
        android:name="com.example.shopapp.ui.product.detail.ProductDetailFragment"
        android:label="@string/products_detail_fragment_label"
        tools:layout="@layout/fragment_product_detail">

        <action
            android:id="@+id/action_detail_to_basket"
            app:destination="@id/basketFragment" />

        <argument
            android:name="objectProduct"
            app:argType="com.example.shopapp.data.model.ProductModel" />

    </fragment>

    <fragment
        android:id="@+id/basketFragment"
        android:name="com.example.shopapp.ui.basket.BasketFragment"
        android:label="@string/basket_fragment_label"
        tools:layout="@layout/fragment_basket">

    </fragment>
</navigation>