<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_product"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal" />

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_back"
            android:layout_margin="20dp"
            android:layout_centerVertical="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/img_basket"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/img_basket"
            android:layout_margin="20dp"
            android:layout_centerVertical="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tl_circle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabBackground="@drawable/tab_pager_selector"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp"
            android:layout_gravity="bottom"
            app:layout_constraintTop_toBottomOf="@+id/vp_product"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            tools:text="Mavi Logo Baskılı Gri Tişört Oversize"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/tl_circle"
            app:layout_constraintStart_toStartOf="parent"/>

        <View
            android:id="@+id/line_one"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_trans"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_description_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/desc_title"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/line_one"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            tools:text="AACAFDLDLMVLDV KDMlmknvkdnvdknvjnbf"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxLines="3"
            app:layout_constraintTop_toBottomOf="@+id/tv_description_title"
            app:layout_constraintStart_toStartOf="parent"/>

        <View
            android:id="@+id/line_two"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_trans"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_features_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/features_title"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/line_two"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_features"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            tools:listitem="@layout/row_feature"
            app:layout_constraintTop_toBottomOf="@+id/tv_features_title"
            app:layout_constraintBottom_toTopOf="@+id/rl_bottom"/>

        <RelativeLayout
            android:id="@+id/rl_bottom"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/tv_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="1789 TL"
                android:layout_centerVertical="true"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/pazarama_text_color"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_checkout"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/edit_basket"
                android:textColor="@color/white"
                android:background="@drawable/button_navyblue_gradient"
                android:textAllCaps="false"
                android:src="@drawable/img_basket"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>


        </RelativeLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
